; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_qp.c_set_umr_data_seg.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_qp.c_set_umr_data_seg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_qp = type { i32 }
%struct.ibv_mw_bind_info = type { i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }
%union.anon = type { %struct.mlx5_wqe_umr_klm_seg, [232 x i8] }
%struct.mlx5_wqe_umr_klm_seg = type { i32, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx5_qp*, i32, i32, %struct.ibv_mw_bind_info*, i32, i8**, i32*)* @set_umr_data_seg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_umr_data_seg(%struct.mlx5_qp* %0, i32 %1, i32 %2, %struct.ibv_mw_bind_info* %3, i32 %4, i8** %5, i32* %6) #0 {
  %8 = alloca %struct.mlx5_qp*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.ibv_mw_bind_info*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8**, align 8
  %14 = alloca i32*, align 8
  %15 = alloca %union.anon*, align 8
  store %struct.mlx5_qp* %0, %struct.mlx5_qp** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store %struct.ibv_mw_bind_info* %3, %struct.ibv_mw_bind_info** %11, align 8
  store i32 %4, i32* %12, align 4
  store i8** %5, i8*** %13, align 8
  store i32* %6, i32** %14, align 8
  %16 = load i8**, i8*** %13, align 8
  %17 = load i8*, i8** %16, align 8
  %18 = bitcast i8* %17 to %union.anon*
  store %union.anon* %18, %union.anon** %15, align 8
  %19 = load %struct.ibv_mw_bind_info*, %struct.ibv_mw_bind_info** %11, align 8
  %20 = getelementptr inbounds %struct.ibv_mw_bind_info, %struct.ibv_mw_bind_info* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 8
  %22 = call i8* @htobe32(i32 %21)
  %23 = load %union.anon*, %union.anon** %15, align 8
  %24 = bitcast %union.anon* %23 to %struct.mlx5_wqe_umr_klm_seg*
  %25 = getelementptr inbounds %struct.mlx5_wqe_umr_klm_seg, %struct.mlx5_wqe_umr_klm_seg* %24, i32 0, i32 2
  store i8* %22, i8** %25, align 8
  %26 = load %struct.ibv_mw_bind_info*, %struct.ibv_mw_bind_info** %11, align 8
  %27 = getelementptr inbounds %struct.ibv_mw_bind_info, %struct.ibv_mw_bind_info* %26, i32 0, i32 1
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i8* @htobe32(i32 %30)
  %32 = load %union.anon*, %union.anon** %15, align 8
  %33 = bitcast %union.anon* %32 to %struct.mlx5_wqe_umr_klm_seg*
  %34 = getelementptr inbounds %struct.mlx5_wqe_umr_klm_seg, %struct.mlx5_wqe_umr_klm_seg* %33, i32 0, i32 1
  store i8* %31, i8** %34, align 8
  %35 = load %struct.ibv_mw_bind_info*, %struct.ibv_mw_bind_info** %11, align 8
  %36 = getelementptr inbounds %struct.ibv_mw_bind_info, %struct.ibv_mw_bind_info* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @htobe64(i32 %37)
  %39 = load %union.anon*, %union.anon** %15, align 8
  %40 = bitcast %union.anon* %39 to %struct.mlx5_wqe_umr_klm_seg*
  %41 = getelementptr inbounds %struct.mlx5_wqe_umr_klm_seg, %struct.mlx5_wqe_umr_klm_seg* %40, i32 0, i32 0
  store i32 %38, i32* %41, align 8
  %42 = load %union.anon*, %union.anon** %15, align 8
  %43 = bitcast %union.anon* %42 to %struct.mlx5_wqe_umr_klm_seg*
  %44 = getelementptr inbounds %struct.mlx5_wqe_umr_klm_seg, %struct.mlx5_wqe_umr_klm_seg* %43, i64 1
  %45 = call i32 @memset(%struct.mlx5_wqe_umr_klm_seg* %44, i32 0, i32 232)
  %46 = load i8**, i8*** %13, align 8
  %47 = load i8*, i8** %46, align 8
  %48 = getelementptr i8, i8* %47, i64 256
  store i8* %48, i8** %46, align 8
  %49 = load i32*, i32** %14, align 8
  %50 = load i32, i32* %49, align 4
  %51 = sext i32 %50 to i64
  %52 = add i64 %51, 16
  %53 = trunc i64 %52 to i32
  store i32 %53, i32* %49, align 4
  ret void
}

declare dso_local i8* @htobe32(i32) #1

declare dso_local i32 @htobe64(i32) #1

declare dso_local i32 @memset(%struct.mlx5_wqe_umr_klm_seg*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
